# workbench

./: .dockerignore  .gitignore  AGENTS.md  LICENSE  README.md  build.gradle.kts  docker-compose.e2e.yaml  docker-compose.yaml  gradle.properties  qodana.yaml  settings.gradle.kts  skills-lock.json
.agents/skills/api-design/: SKILL.md  examples.md  reference.md
.agents/skills/git-commit/: SKILL.md  examples.md
.agents/skills/kotlin-testing/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  nightly.yml  qodana_code_quality.yml  quality-gate.yml
build-logic/: build.gradle.kts  settings.gradle.kts
config/application/: application-e2e.yml  application-local.yml  application.yml
config/detekt/: detekt-test.yml  detekt.yml
config/logging/: logback-spring.xml
config/pitest/: pitest.properties
docker/: jvm-entrypoint.sh
docker/debezium/: workbench-outbox-connector.json
docs/: frontend-i18n-bundle-baseline.md  module-architecture.md  testing-governance.md
gradle/: libs.versions.toml
scripts/ci/: check_diff_coverage.py  coverage_metrics.py  merge_kover_reports.py  merge_pit_reports.py  module_coverage_delta.py  pyproject.toml  render-quality-summary.py  render_quality_summary.py
scripts/dev/: ephemeral-infra  ephemeral_infra.py  pyproject.toml  test_ephemeral_infra.py  test_ephemeral_infra_smoke.py
workbench-agile/: build.gradle.kts
workbench-application/: build.gradle.kts
workbench-core/: build.gradle.kts
workbench-data/: build.gradle.kts
workbench-frontend/: .env.example  build.gradle.kts  components.json  eslint-plugin-zeithrold.js  eslint.config.js  orval.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  storybook-component-coverage-baseline.json  svelte.config.js  vite.config.ts
workbench-frontend/.storybook/: main.ts  preview.ts  vitest.setup.ts
workbench-frontend/messages/: en-US.json
workbench-frontend/project.inlang/: settings.json
workbench-frontend/scripts/: check-bundle-size.mjs  check-bundle-size.test.ts  ensure-env.mjs  storybook-component-coverage.mjs  storybook-component-coverage.test.ts
workbench-frontend/src/: app.css  app.html  test-setup.ts
workbench-identity/: build.gradle.kts
workbench-jobs/: build.gradle.kts
workbench-kernel/: build.gradle.kts
workbench-notification/: build.gradle.kts
workbench-security/: build.gradle.kts
workbench-service/: build.gradle.kts
workbench-tenant/: build.gradle.kts
workbench-test-support/: build.gradle.kts
workbench-web/: .dockerignore  Dockerfile  build.gradle.kts
workbench-worker/: .dockerignore  Dockerfile  build.gradle.kts
(+3317 files in other folders)
