[project]
name = "workbench-ci"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["diff-cover>=9.2"]

[project.scripts]
check-diff-coverage = "check_diff_coverage:main"

[dependency-groups]
dev = ["ruff>=0.9"]

[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["check_diff_coverage.py"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["."]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "RUF",
]
ignore = [
    "SIM108",
]

[tool.ruff.lint.isort]
known-first-party = ["check_diff_coverage"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
