[project]
name = "workbench-dev"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
ephemeral-infra = "ephemeral_infra:main"

[dependency-groups]
dev = ["ruff>=0.9"]

[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "ephemeral_infra.py",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["."]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "RUF",
]
ignore = [
    "SIM108",
]

[tool.ruff.lint.isort]
known-first-party = [
    "ephemeral_infra",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
